2012-12-21  Brady Eidson  <beidson@apple.com>

        Remove ResourceLoadScheduler::addMainResourceLoad and all related code
        <rdar://problem/12925275> and https://bugs.webkit.org/show_bug.cgi?id=105644

        Reviewed by Alexey Proskuryakov.

        Now that main resources loads are scheduled (bug 49246) we don't need this stuff anymore.

        * WebProcess/Network/WebResourceLoadScheduler.cpp:
        (WebKit::WebResourceLoadScheduler::remove):
        (WebKit::WebResourceLoadScheduler::networkProcessCrashed):
        * WebProcess/Network/WebResourceLoadScheduler.h:

2012-12-20  Sam Weinig  <sam@webkit.org>

        Add WebKit2 SPI to get the current selection as a WebArchive
        https://bugs.webkit.org/show_bug.cgi?id=105613

        Reviewed by Anders Carlsson.

        * UIProcess/API/C/WKPage.cpp:
        (WKPageGetSelectionAsWebArchiveData):
        * UIProcess/API/C/WKPage.h:
        Add SPI.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::getSelectionAsWebArchiveData):
        (WebKit):
        * UIProcess/WebPageProxy.h:
        (WebPageProxy):
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit):
        (WebKit::frameWithSelection):
        (WebKit::WebPage::getSelectionAsWebArchiveData):
        * WebProcess/WebPage/WebPage.h:
        (WebPage):
        * WebProcess/WebPage/WebPage.messages.in:
        Pipe getter to the WebProcess and back.

2012-12-21  Brady Eidson  <beidson@apple.com>

        Perform cleanup in WebProcess if the NetworkProcess crashes.
        <rdar://problem/12903117> and https://bugs.webkit.org/show_bug.cgi?id=105592

        Reviewed by Alexey Proskuryakov.

        If the NetworkProcess crashes, a whole bunch of WebResourceLoaders (and WebCore::ResourceLoaders)
        might be orphaned in the WebProcess.

        These loaders need to fail once it is apparent they will never finish loading.

        * Shared/API/c/WKError.h: Add a new error representing an "WebKit Internal Error."
